- Added more checks for null or empty strings before checking for files/directories
- No longer throws an exception when the path is null/empty in FileExists and DirExists()
- Checks for value name + others before being added to bad registry key array
- Did some minor fixes to the ActiveX/COM scanner
- Changes to wait cursor when scanning
- Fixed bug causing duplicates in uninstall manager

+ Version 1.3.1 Released

- Calls ShowErrorMessage() instead of throwing an exception everytime in xmlRegistry
- Fixed bug causing the whole startup subkey to be stored and removed
- Displays if user is administrator and if process is being debugged in crashreporter
- Added Try-Catch blocks for System.Security.SecurityException in Fonts, HelpFiles and Sounds
- Cleaned up nested try-catch blocks in scanners
- Fixed the tab order in the dialogs
- Build Time uses MM/dd/yyyy format instead of ToShortDateString because of windows 7 new format
- Checks for update when dialog is shown instead of loaded
- Changed window settings for restore dialog and startup manager
- Directory settings are controlled through Settings.cs instead of Program.cs
- Build time is returned in Settings.cs instead of Program.cs

+ Version 1.3.2 Released

- Fixed the updater so that the build dates can be compared
- No longer sets the last update time in Program.cs
- Uses Generic Sans Serif font family for advanced tree view instead of Tahoma
- Removed label above section list in main dialog and replaced "My Computer" with "Sections to Scan"
- System restore works with Windows Se7en and beyond
- Creates restore point if running program for first time
- No longer waits for log file to close before fixing problems
- Tries to catch exception if an error is thrown when uninstalling a program or removing a registry key
- Uses ListViewItem.Tag to store programinfo instead of dictionary
- No longer sets last update date before program exits